# aurora

./: Cargo.toml  LICENSE  README.md  aurora.install
.github/workflows/: release-linux-bundle.yml
helper/: Cargo.toml
helper/src/: main.rs
resources/: io.github.ahmoodio.aurora.desktop  io.github.ahmoodio.aurora.metainfo.xml  io.github.ahmoodio.aurora.policy
src/: app.rs  main.rs
src/core/: appstream.rs  cache.rs  mod.rs  models.rs  providers.rs  runner.rs  transactions.rs
src/core/providers/: aur.rs  flatpak.rs  pacman.rs
src/ui/: details.rs  home.rs  installed.rs  mod.rs  search.rs  settings.rs  updates.rs
src/ui/widgets/: card.rs  log_drawer.rs  mod.rs  screenshot_carousel.rs
