[package]
name = "aurora"
version = "0.1.0"
edition = "2021"

[dependencies]
gtk = { package = "gtk4", version = "0.8", features = ["v4_10"] }
libadwaita = { version = "0.6", features = ["v1_4"] }
glib = "0.19"
gio = "0.19"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
once_cell = "1.19"
ureq = "2.9"
directories = "5.0"
url = "2.5"
libc = "0.2"
